<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/bold"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/semibold"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <EditText
        android:id="@+id/lg_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:textColorLink="@color/black"
        android:layout_marginHorizontal="25dp"
        android:hint="Enter Email"
        android:fontFamily="@font/semibold"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:background="@drawable/ed_bg"
        android:paddingLeft="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_signIn" />

    <EditText
        android:id="@+id/lg_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:fontFamily="@font/semibold"
        android:background="@drawable/ed_bg"

        android:layout_marginHorizontal="25sp"
        app:layout_constraintTop_toBottomOf="@+id/lg_email"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/lg_email"
        app:layout_constraintTop_toBottomOf="@+id/lg_password"
        android:fontFamily="@font/semibold"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:textAllCaps="false"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lg_password" />


    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/semibold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/semibold"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/semibold"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/txt_dontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <ImageView
        android:id="@+id/bottom_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>